--- a/tournament-web-app/src/app/login-form/login-form.component.html
+++ b/tournament-web-app/src/app/login-form/login-form.component.html
@@ -11,9 +11,12 @@
   <img class="google-image" (click)="signInWithPopup()" src="/assets/btn_google_signin_small.png" >
 
 
-  <div class="divider">
-    <mat-divider></mat-divider>  
-    <h3 class="divider-message">OR</h3> 
+  <mat-divider></mat-divider>  
+
+  <div class="bar">
+    <div class="spacer"></div>
+    <span>Ingresa con un email</span>
+    <div class="spacer"></div>
   </div>
 
 
