--- a/tournament-web-app/src/app/medal-new/medal-new.component.html
+++ b/tournament-web-app/src/app/medal-new/medal-new.component.html
@@ -1,3 +1,7 @@
+<a [routerLink]="'../'">
+    <mat-icon>arrow_back</mat-icon>    
+</a>    
+
 <mat-card [formGroup]="form">
     <mat-card-header>
         <mat-card-title>Nueva premiacion</mat-card-title>
