--- a/tournament-web-app/src/app/category-edit/category-edit.component.html
+++ b/tournament-web-app/src/app/category-edit/category-edit.component.html
@@ -1,22 +1,29 @@
+<a [routerLink]="'../../'">
+    <mat-icon>arrow_back</mat-icon>    
+</a>    
 
-<span class="bar">
-    <span class="spacer"></span>
-    <button mat-button-icon color="warn" (click)="onDelete()"><mat-icon>delete</mat-icon></button> 
-</span>   
-<mat-card [formGroup]="form">
-    <mat-card-header>
-        <mat-card-title>Editar categoria</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <mat-form-field>    
-            <input matInput placeholder="label" formControlName="label" >
-        </mat-form-field>
-        <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>            
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-        <a [routerLink]="'/tournament/'+tournamentId">
-            <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-        </a>        
-    </mat-card-actions>
- </mat-card>   
+@if(tournament){
+    <h1>{{tournament.label}}</h1>
+    <div class="bar">
+        <span class="spacer"></span>
+        <button mat-button-icon color="warn" (click)="onDelete()"><mat-icon>delete</mat-icon></button> 
+    </div>
+
+    <mat-card [formGroup]="form">
+        <mat-card-header>
+            <mat-card-title>Editar categoria</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <mat-form-field>    
+                <input matInput placeholder="label" formControlName="label" >
+            </mat-form-field>
+            <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>            
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
+            <a [routerLink]="['../../']">
+                <button mat-icon-button><mat-icon>cancel</mat-icon></button>
+            </a>        
+        </mat-card-actions>
+    </mat-card>   
+}
