--- a/tournament-web-app/src/app/evaluation-edit/evaluation-edit.component.html
+++ b/tournament-web-app/src/app/evaluation-edit/evaluation-edit.component.html
@@ -1,46 +1,56 @@
+<a [routerLink]="'../../'">
+    <mat-icon>arrow_back</mat-icon>    
+</a>    
 
-<span class="bar">
-    <span class="spacer"></span>
-    <button mat-button-icon color="warn" (click)="onDelete()"><mat-icon>delete</mat-icon></button> 
-</span>   
-<mat-card [formGroup]="form">
-    <mat-card-header>
-        <mat-card-title>Editar Evaluación</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <mat-form-field>    
-            <input matInput placeholder="label" formControlName="label" >
-        </mat-form-field>
-        <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>            
+@if(tournament){
+    <h1>{{tournament.label}}</h1>
+    <span class="bar">
+        <span class="spacer"></span>
+        <button mat-button-icon color="warn" (click)="onDelete()"><mat-icon>delete</mat-icon></button> 
+    </span>   
+    <mat-card [formGroup]="form">
+        <mat-card-header>
+            <mat-card-title>Editar Evaluación</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <mat-form-field>    
+                <input matInput placeholder="label" formControlName="label" >
+            </mat-form-field>
+            <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>            
 
-        @if( evaluation ){
-            @if( evaluation.aspects.length ){
-            <h2>Aspectos   
-                <a [routerLink]="['/','tournament',tournamentId,'evaluation',evaluationId,'aspectNew']">
-                    <button mat-button-icon><mat-icon>add</mat-icon></button>
-                </a>
-            </h2>        
+            @if( evaluation ){
+                @if( evaluation.aspects.length ){
+                <h2>Aspectos   
+                    <a [routerLink]="['aspectNew']">
+                        <button mat-button-icon><mat-icon>add</mat-icon></button>
+                    </a>
+                </h2>        
+                }
+                <ul>
+                @for(aspect of evaluation.aspects; track aspect){
+                    <a [routerLink]="['aspect', aspect.id]">
+                        <li>{{ aspect.label }}</li>
+                    </a>
+                }
+                @empty{
+                    <span color="warn" class="error-message">Por favor adicione aspectos</span>
+                    <a [routerLink]="['aspectNew']">
+                        <button mat-button-icon><mat-icon>add</mat-icon></button>
+                    </a>
+                }   
+                </ul>         
             }
-            <ul>
-            @for(aspect of evaluation.aspects; track aspect){
-                <a [routerLink]="['/','tournament',tournamentId,'evaluation',evaluationId,'aspect', aspect.id]">
-                    <li>{{ aspect.label }}</li>
-                </a>
+        
+        </mat-card-content>
+        <mat-card-actions>
+            @if( evaluation ){
+                @if( evaluation.aspects.length ){
+                    <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
+                    <a [routerLink]="['../']">
+                        <button mat-icon-button><mat-icon>cancel</mat-icon></button>
+                    </a>        
+                }
             }
-            @empty{
-                <span color="warn" class="error-message">Por favor adicione aspectos</span>
-                <a [routerLink]="['/','tournament',tournamentId,'evaluation',evaluationId,'aspectNew']">
-                    <button mat-button-icon><mat-icon>add</mat-icon></button>
-                </a>
-            }   
-            </ul>         
-        }
-     
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-        <a [routerLink]="'/tournament/'+tournamentId">
-            <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-        </a>        
-    </mat-card-actions>
- </mat-card>   
+        </mat-card-actions>
+    </mat-card>   
+}
