--- a/tournament-web-app/src/app/evaluation-new/evaluation-new.component.html
+++ b/tournament-web-app/src/app/evaluation-new/evaluation-new.component.html
@@ -1,17 +1,24 @@
-<mat-card [formGroup]="form">
-    <mat-card-header>
-        <mat-card-title>Nueva Evaluacion</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <mat-form-field>    
-            <input matInput placeholder="label" formControlName="label" >
-        </mat-form-field>
-        <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>            
-    </mat-card-content>
-    <mat-card-actions>
-        <button #edited id="edited" mat-button (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-        <a [routerLink]="'/tournament/'+tournamentId">
-            <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-        </a>        
-    </mat-card-actions>
- </mat-card>   
+<a [routerLink]="'../'">
+    <mat-icon>arrow_back</mat-icon>    
+</a>    
+
+@if(tournament){
+    <h1>{{tournament.label}}</h1>
+    <mat-card [formGroup]="form">
+        <mat-card-header>
+            <mat-card-title>Nueva Evaluacion</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <mat-form-field>    
+                <input matInput placeholder="label" formControlName="label" >
+            </mat-form-field>
+            <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>            
+        </mat-card-content>
+        <mat-card-actions>
+            <button #edited id="edited" mat-button (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
+            <a [routerLink]="['../']">
+                <button mat-icon-button><mat-icon>cancel</mat-icon></button>
+            </a>        
+        </mat-card-actions>
+    </mat-card>   
+}
