--- a/tournament-web-app/src/app/juror-new/juror-new.component.html
+++ b/tournament-web-app/src/app/juror-new/juror-new.component.html
@@ -1,19 +1,26 @@
-<mat-card [formGroup]="form">
-    <mat-card-header>
-        <mat-card-title>Nueva categoria</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <mat-form-field> 
-            <input matInput placeholder="Nombre del jurado" formControlName="label">
-        </mat-form-field>                 
-        <mat-form-field> 
-            <input matInput placeholder="email" formControlName="email" >
-        </mat-form-field>              
-    </mat-card-content>
-    <mat-card-actions>
-        <button #edited id="edited" mat-button (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-        <a [routerLink]="'/../'">
-            <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-        </a>        
-    </mat-card-actions>
- </mat-card>   
+<a [routerLink]="'../'">
+    <mat-icon>arrow_back</mat-icon>    
+</a>    
+
+@if(tournament){
+    <h1>{{tournament.label}}</h1>
+    <mat-card [formGroup]="form">
+        <mat-card-header>
+            <mat-card-title>Nuevo Jurado</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <mat-form-field> 
+                <input matInput placeholder="Nombre del jurado" formControlName="label">
+            </mat-form-field>                 
+            <mat-form-field> 
+                <input matInput placeholder="email" formControlName="email" >
+            </mat-form-field>              
+        </mat-card-content>
+        <mat-card-actions>
+            <button #edited id="edited" mat-button (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
+            <a [routerLink]="'/../'">
+                <button mat-icon-button><mat-icon>cancel</mat-icon></button>
+            </a>        
+        </mat-card-actions>
+    </mat-card>   
+}
