--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
@@ -41,3 +41,10 @@ p{
 .performances{
     margin-left:2em;
 }
+
+.tournament-url-container{
+    background-color: lightblue;
+    padding: 15px;
+    margin: 1em;
+    display:flex;
+}
