--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -35,10 +35,13 @@
                     </mat-form-field> 
                 </mat-grid-tile>
                 <mat-grid-tile colspan="3">
+                    <h4>Envie este link a sus participantes</h4>
+                </mat-grid-tile>    
+                <mat-grid-tile colspan="3">
                     <div class="tournament-url-container">
                         <span class="spacer"></span>
                         <span> 
-                            <h3 >{{ getTournamentPath() }}</h3>
+                            <h3>{{ getTournamentPath() }}</h3>
                         </span>
                         <span class="spacer"></span>
                     </div>   
