--- a/tournament-web-app/src/app/performance-new/performance-new.component.html
+++ b/tournament-web-app/src/app/performance-new/performance-new.component.html
@@ -1,1 +1,32 @@
-<p>performance-new works!</p>
+<a routerLink="'../'"><button mat-icon-button><mat-icon>arrow_back</mat-icon></button></a>
+<h1>Nuevo performance</h1>    
+@if( tournament ){
+    <h1>{{ tournament.label }}</h1>
+    <mat-card [formGroup]="g">
+        <mat-card-header>
+        </mat-card-header>    
+        <mat-card-content>
+            <mat-form-field> 
+                <mat-label>Nombre del performance</mat-label>  
+                <input matInput formControlName="label" >
+            </mat-form-field>
+            <mat-form-field> 
+                <mat-label>Nombre completo del bailarin</mat-label>  
+                <input matInput  formControlName="fullname" >
+            </mat-form-field>             
+            <mat-form-field appearance="fill" >
+                <mat-label>categoria</mat-label>
+                <mat-select formControlName="categoryId">
+                    <mat-option *ngFor="let c of tournament.categories" [value]="c.id">
+                    {{ c.label }}
+                    </mat-option>                 
+                </mat-select>
+            </mat-form-field> 
+        </mat-card-content>
+        <mat-card-actions>
+            <button id="done" name="done" mat-button (click)="onSubmit()" [disabled]="!g.valid"><mat-icon>done</mat-icon></button>
+            <button mat-button (click)="onCancel()"><mat-icon>cancel</mat-icon></button>
+    </mat-card-actions>
+    </mat-card>
+
+}
