--- a/tournament-web-app/src/app/program-list/program-list.component.html
+++ b/tournament-web-app/src/app/program-list/program-list.component.html
@@ -1,11 +1,4 @@
-<a [routerLink]="['/','tournament',tournamentId]">
-    <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
-</a>
-@if( tournament ){
-    <h1>{{  tournament.label }}</h1>
-
-    <h2>Programa</h2>
-
+<!--
     @if( !tournament.isProgramReleased ){
         <button mat-button color="warn" (click)="onReleaseProgram(true)">Publicar Programa</button>
     }
@@ -13,31 +6,21 @@
         <button mat-button color="warn" (click)="onReleaseProgram(false)">Ocultar Programa</button>
     }    
 
-    @for(p of performances; track p;let idx = $index, e = $even){
         <mat-grid-list cols="5" rowHeight="2em" [style.background]="performanceColor">
-            <mat-grid-tile>
-                @if(isAdmin){
-                <button mat-icon-button (click)="onPerformanceUp(p.id)"><mat-icon>arrow_upward</mat-icon></button>
-                }
-                {{ idx + 1}}
-                @if(isAdmin){
-                <button mat-icon-button (click)="onPerformanceDown(p.id)"><mat-icon>arrow_downward</mat-icon></button>
-                }
-            </mat-grid-tile>
-            <mat-grid-tile><span class="label">{{ p.performance.label }}</span></mat-grid-tile>
-            <mat-grid-tile><span class="fullname">{{ p.performance.fullname }}</span></mat-grid-tile>
+            <mat-grid-tile><span class="label">{{ performance.label }}</span></mat-grid-tile>
+            <mat-grid-tile><span class="fullname">{{ performance.fullname }}</span></mat-grid-tile>
             <mat-grid-tile>
                 @if( isAdmin && p.performance.isReleased  ){
-                    <span class="score">score:{{ p.performance.grade }}</span>
+                    <span class="score">score:{{ performance.grade }}</span>
                 }
                 @if( isAdmin && !p.performance.isReleased && p.performance.grade ){ 
-                    <span class="score">score:{{ p.performance.grade }}</span>
+                    <span class="score">score:{{ performance.grade }}</span>
                     <button mat-mini-fab color="accent" (click)="onRelease(p)"><mat-icon>done</mat-icon></button>
                 }                
             </mat-grid-tile>
             <mat-grid-tile>
                 @if( isAdmin || p.performance.isReleased  ){
-                    <span>{{ p.medal }}</span>
+                    <span>{{ performance.medal }}</span>
                 }
             </mat-grid-tile>    
         </mat-grid-list>        
@@ -51,11 +34,8 @@
             <app-evaluationgrade-list [tournamentId]="tournamentId" [tournament]="tournament" [performanceId]="p.id" [performance]="p.performance"></app-evaluationgrade-list>
             </mat-expansion-panel>
         </mat-accordion>        
-    } 
-    @empty{
-        Por favor adicione performances al programa desde la lista de performances 
-    }
+
 
 }
-
+-->
 
