--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -34,7 +34,7 @@
                         </mat-form-field> 
                     </mat-grid-tile>
                     <mat-grid-tile colspan="3">
-                        <h4>Envie este link a sus participantes</h4>
+                        <h4>Envie este link a sus participantes para que envien solicitudes</h4>
                     </mat-grid-tile>    
                     <mat-grid-tile colspan="3">
                         <div class="tournament-url-container">
@@ -51,138 +51,114 @@
         </mat-card>    
     </form>
 
-   
-    <mat-accordion>
-      <mat-expansion-panel hideToggle [expanded]="hasPendingRequests">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Solicitudes de presentacion
-          </mat-panel-title>
-          <mat-panel-description>
-            @if( hasPendingRequests ){
-                Usted tiene solicitudes pendientes
-            }
-            @else{
-                no hay solicitudes pendientes
-            }
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-            <div>
-                <mat-list>
-                @for( p of pendingRequestReferences; track p.id){
-                    <mat-list-item>
-                        <a [routerLink]="['performanceEdit',p.id]">
-                            <span>{{ p.performance.label }}</span>
-                            @if( p.performance.isCanceled ){ 
-                            <span class="cancelado">Cancelado</span> 
-                            } 
-                        </a>
-                        @if( !p.isInProgram ){
-                            <button mat-button (click)="onAccept(p.id)">Aceptar en el programa</button>
-                        }
-                        @else{
-                            <span class="status">Aceptado</span>
-                        }
-                    </mat-list-item>
-                } 
-                @empty{
-                    <div>No hay ninguna solicitud de presentacion que requira aprovacion</div>                
-                }
-                </mat-list>  
-            </div>   
+
+    @if( pendingRequestReferences.length ||  (pendingRequestReferences.length == 0 && programReferences.length == 0) ){
+        <h2>Solicitudes de presentacion</h2>
+        <mat-list>
+        @for( p of pendingRequestReferences; track p.id){
+            <mat-list-item>
+                <a [routerLink]="['performanceEdit',p.id]">
+                    <span>{{ p.performance.label }}</span>
+                    @if( p.performance.isCanceled ){ 
+                    <span class="cancelado">Cancelado</span> 
+                    } 
+                </a>
+                <button mat-button (click)="onAccept(p.id)">Aceptar en el programa</button>
+            </mat-list-item>
+        } 
+        @empty{
+            <span>No hay ninguna solicitud pendiente</span>
+        }
+        </mat-list>  
+    }    
+    <h2>Programa</h2>
+    @if( programReferences.length > 0){
+        @if( !tournament.isProgramReleased ){
+            <button mat-button color="warn" (click)="onReleaseProgram(true)">Publicar Programa</button>
+        }
+        @else{
+            <button mat-button color="warn" (click)="onReleaseProgram(false)">Ocultar Programa</button>
+        }    
+    }
     
-      </mat-expansion-panel>          
+    <mat-accordion>
+    @for(p of programReferences; track p.id;let idx = $index, e = $even){
+            <mat-expansion-panel hideToggle>
+                <mat-expansion-panel-header>
+                <mat-panel-title>
+                    {{ p.performance.label }}
+                </mat-panel-title>
+                <mat-panel-description>
+                    {{ p.performance.fullname }}
+                </mat-panel-description>
+                </mat-expansion-panel-header>
+                <div class="bar">
+                    @if(isAdmin){
+                    <button mat-icon-button (click)="onPerformanceUp(p.id)"><mat-icon>arrow_upward</mat-icon></button>
+                    }
+                    <span>{{ idx + 1}}</span>
+                    @if(isAdmin){
+                    <button mat-icon-button (click)="onPerformanceDown(p.id)"><mat-icon>arrow_downward</mat-icon></button>
+                    }
+                    <span class="spacer"></span>
+                    <button mat-icon-button color="warn" (click)="onReject(p.id)"><mat-icon>delete</mat-icon></button>
+                </div>                          
+                <app-evaluationgrade-list [tournamentId]="tournamentId" [tournament]="tournament" [performanceId]="p.id" [performance]="p.performance"></app-evaluationgrade-list> 
+            </mat-expansion-panel>
+    }
+    @empty{
+        <span class="attention">Usted necesita aceptar solicitudes de presentacion en el programa</span>
+    }
     </mat-accordion>
-    <mat-tab-group #tournamentTab>
-        <mat-tab label="Programa" > 
-
-            @if( !tournament.isProgramReleased ){
-                <button mat-button color="warn" (click)="onReleaseProgram(true)">Publicar Programa</button>
-            }
-            @else{
-                <button mat-button color="warn" (click)="onReleaseProgram(false)">Ocultar Programa</button>
-            }    
-
-            <mat-accordion>
-            @for(p of programReferences; track p.id;let idx = $index, e = $even){
-                    <mat-expansion-panel hideToggle>
-                      <mat-expansion-panel-header>
-                        <mat-panel-title>
-                            {{ idx + 1}} - {{ p.performance.label }}
-                        </mat-panel-title>
-                        <mat-panel-description>
-                            {{ p.performance.fullname }}
-                        </mat-panel-description>
-                      </mat-expansion-panel-header>
-                      <mat-grid-list cols="11"  >
-                        <mat-grid-tile colspan="2">
-                            @if(isAdmin){
-                            <button mat-icon-button (click)="onPerformanceUp(p.id)"><mat-icon>arrow_upward</mat-icon></button>
-                            }
-                            {{ idx + 1}}
-                            @if(isAdmin){
-                            <button mat-icon-button (click)="onPerformanceDown(p.id)"><mat-icon>arrow_downward</mat-icon></button>
-                            }
-                        </mat-grid-tile>
-                        <mat-grid-tile class="evaluation-grade-list" colspan="8">
-                            <p>
-                            <app-evaluationgrade-list [tournamentId]="tournamentId" [tournament]="tournament" [performanceId]="p.id" [performance]="p.performance"></app-evaluationgrade-list>                             
-                            </p>
-                        </mat-grid-tile>
-                        <mat-grid-tile>
-                            <button mat-icon-button color="warn" (click)="onReject(p.id)"><mat-icon>delete</mat-icon></button>
-                        </mat-grid-tile>
-                      </mat-grid-list>  
-                    </mat-expansion-panel>
-        
-            }
-            </mat-accordion>
 
 <!--
-                    <mat-grid-tile colspan="8" style.background="blue">
-                        <mat-accordion>
-                            <mat-expansion-panel hideToggle>
-                              <mat-expansion-panel-header>
-                                <mat-panel-title>
-                                    {{ p.performance.label }}
-                                </mat-panel-title>
-                                <mat-panel-description>
-                                    {{ p.performance.fullname }}
-                                </mat-panel-description>
-                              </mat-expansion-panel-header>
-                              <app-evaluationgrade-list [tournamentId]="tournamentId" [tournament]="tournament" [performanceId]="p.id" [performance]="p.performance"></app-evaluationgrade-list> 
-                             <p>Hola</p>
-                            </mat-expansion-panel>
-                        </mat-accordion>
-                        
-                        <p>hola</p>                        
-                    </mat-grid-tile>
+                <mat-grid-tile colspan="8" style.background="blue">
+                    <mat-accordion>
+                        <mat-expansion-panel hideToggle>
+                          <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                {{ p.performance.label }}
+                            </mat-panel-title>
+                            <mat-panel-description>
+                                {{ p.performance.fullname }}
+                            </mat-panel-description>
+                          </mat-expansion-panel-header>
+                          <app-evaluationgrade-list [tournamentId]="tournamentId" [tournament]="tournament" [performanceId]="p.id" [performance]="p.performance"></app-evaluationgrade-list> 
+                         <p>Hola</p>
+                        </mat-expansion-panel>
+                    </mat-accordion>
                     
-                    <mat-grid-tile>
-                        @if( isAdmin && p.performance.isReleased  ){
-                            <span class="score">score:{{ p.performance.grade }}</span>
-                        }
-                        @if( isAdmin && !p.performance.isReleased && p.performance.grade ){ 
-                            <span class="score">score:{{ p.performance.grade }}</span>
-                            <button mat-mini-fab color="accent" (click)="onRelease(p.id, p.performance)"><mat-icon>done</mat-icon></button>
-                        }                
-                    </mat-grid-tile>
-                    -->
-                    <!--
-                    <mat-grid-tile>
-                        @if( isAdmin || p.performance.isReleased  ){
-                            <span>{{ p.medal }}</span>
-                        }
-                    </mat-grid-tile> 
-                     
-                </mat-grid-list>        
-            } 
-            @empty{
-                Por favor adicione performances al programa desde la lista de performances 
-            }
-        -->
-        
-        </mat-tab>    
+                    <p>hola</p>                        
+                </mat-grid-tile>
+                
+                <mat-grid-tile>
+                    @if( isAdmin && p.performance.isReleased  ){
+                        <span class="score">score:{{ p.performance.grade }}</span>
+                    }
+                    @if( isAdmin && !p.performance.isReleased && p.performance.grade ){ 
+                        <span class="score">score:{{ p.performance.grade }}</span>
+                        <button mat-mini-fab color="accent" (click)="onRelease(p.id, p.performance)"><mat-icon>done</mat-icon></button>
+                    }                
+                </mat-grid-tile>
+                -->
+                <!--
+                <mat-grid-tile>
+                    @if( isAdmin || p.performance.isReleased  ){
+                        <span>{{ p.medal }}</span>
+                    }
+                </mat-grid-tile> 
+                 
+            </mat-grid-list>        
+        } 
+        @empty{
+            Por favor adicione performances al programa desde la lista de performances 
+        }
+    -->
+    
+     
+
+
+    <mat-tab-group #tournamentTab>
         <mat-tab label="Editar"> 
             <mat-accordion>
                 <mat-expansion-panel [expanded]="activePanel == 'categories'" (opened)="onPanelActivated('categories')">
