--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
@@ -62,7 +62,7 @@ p{
 }
 .attention{
     margin:5px;
-    background-color: lightyellow;
+    background-color: yellow;
 }
 .performance-label{
     margin-left: 5px;
@@ -72,4 +72,8 @@ p{
 .performance-fullname{
     margin-left: 50px;
     vertical-align:auto;
+}
+.program{
+    margin-bottom: 5px;
+    border: 1px solid black;
 }
